--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0+3
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -29,6 +29,7 @@ environment:
 dependencies:
   cloud_firestore: ^3.1.11
   confetti: ^0.6.0
+  connectivity_plus: ^2.3.0
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.12
   firebase_core: ^1.14.0
@@ -37,6 +38,7 @@ dependencies:
     sdk: flutter
   flutter_datetime_picker: ^1.5.1
   flutter_launcher_icons: ^0.9.2
+  flutter_native_splash: ^2.2.2
   flutter_svg: ^1.0.3
   google_sign_in: ^5.2.4
   http: ^0.13.4
@@ -56,6 +58,12 @@ flutter_icons:
   image_path: "assets/images/icon.png"
   adaptive_icon_foreground: "assets/images/icon_fg.png"
   adaptive_icon_background: "assets/images/icon_bg.png"
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: "assets/images/icon_round.png"
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
